--- a/mohdali.github.io.csproj
+++ b/mohdali.github.io.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.6" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="global.json" CopyToOutputDirectory="Never" />
+    <Content Remove="Prerender\**" CopyToPublishDirectory="Never" />
+  </ItemGroup>
+
 </Project>
