--- a/Prerender/package.json
+++ b/Prerender/package.json
@@ -1,6 +1,7 @@
 {
     "reactSnap": {
         "source": "output/wwwroot",
+        "skipThirdPartyRequests": true,    
         "minifyHtml": {
             "collapseWhitespace": true,
             "removeComments": true
