--- a/mohdali.github.io.csproj
+++ b/mohdali.github.io.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="6.6.0" />
   </ItemGroup>
 
   <ItemGroup>
