--- a/src/mohdali.github.io/mohdali.github.io.csproj
+++ b/src/mohdali.github.io/mohdali.github.io.csproj
@@ -6,8 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Humanizer" Version="2.14.1" />
+  <ItemGroup>    
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.6.0" />
@@ -15,6 +14,10 @@
 
   <ItemGroup>
     <Content Remove="Prerender\**" CopyToPublishDirectory="Never" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlogEngine\BlogEngine.csproj" />
   </ItemGroup>
 
 </Project>
