--- a/src/BlogEngine/BlogEngine.csproj
+++ b/src/BlogEngine/BlogEngine.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="Humanizer" Version="2.14.1" />
   </ItemGroup>
 
+  <ItemGroup>
+        <Folder Include="wwwroot\" />
+  </ItemGroup>
+
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="npm install" WorkingDirectory="$(ProjectDir)ClientLib" />
     <Exec Command="npm run build" WorkingDirectory="$(ProjectDir)ClientLib" />
