--- a/src/BlogEngine.Markdown/BlogEngine.Markdown.csproj
+++ b/src/BlogEngine.Markdown/BlogEngine.Markdown.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.33.0" PrivateAssets="all" GeneratePathProperty="true"/>
+    <PackageReference Include="Markdig" Version="0.33.0" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="6.0.24" PrivateAssets="all"/>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
   </ItemGroup>
