--- a/src/BlogEngine.Markdown/BlogEngine.Markdown.csproj
+++ b/src/BlogEngine.Markdown/BlogEngine.Markdown.csproj
@@ -7,9 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.33.0" PrivateAssets="all" GeneratePathProperty="true" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="6.0.24" PrivateAssets="all"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="6.0.24" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
+    <PackageReference Include="YamlDotNet" Version="13.7.1" PrivateAssets="all" GeneratePathProperty="true"/>
   </ItemGroup>
 
 	<PropertyGroup>
@@ -19,6 +20,7 @@
 	<Target Name="GetDependencyTargetPaths">
 		<ItemGroup>
 			<TargetPathWithTargetPlatformMoniker Include="$(PKGMarkdig)\lib\netstandard2.0\Markdig.dll" IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PKGYamlDotNet)\lib\netstandard2.0\YamlDotNet.dll" IncludeRuntimeDependency="false" />
 		</ItemGroup>
 	</Target>
 
