--- a/src/BlogEngine.Markdown/BlogEngine.Markdown.csproj
+++ b/src/BlogEngine.Markdown/BlogEngine.Markdown.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.33.0" PrivateAssets="all" GeneratePathProperty="true" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="6.0.24" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="6.0.24" PrivateAssets="all" GeneratePathProperty="true"/>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
     <PackageReference Include="YamlDotNet" Version="13.7.1" PrivateAssets="all" GeneratePathProperty="true"/>
@@ -21,6 +21,7 @@
 		<ItemGroup>
 			<TargetPathWithTargetPlatformMoniker Include="$(PKGMarkdig)\lib\netstandard2.0\Markdig.dll" IncludeRuntimeDependency="false" />
 			<TargetPathWithTargetPlatformMoniker Include="$(PKGYamlDotNet)\lib\netstandard2.0\YamlDotNet.dll" IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PKGMicrosoft_AspNetCore_Razor_Language)\lib\netstandard2.0\Microsoft.AspNetCore.Razor.Language.dll" IncludeRuntimeDependency="false" />
 		</ItemGroup>
 	</Target>
 
