--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # uses GitHub's checkout action to checkout code form the master branch
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       
-      # sets up .NET Core SDK 3.1
-      - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v1
+      # sets up .NET 9 SDK
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
       
       # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
@@ -40,7 +42,7 @@ jobs:
         
       
       - name: Commit wwwroot to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
